# p1lending-etl

./: .claudeignore  .env.staging.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  AWS_EC2_PROVISIONING.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_SCRIPTS.md  DEPLOYMENT_STATUS.md  DEPLOY_FIX.md  DEPLOY_NOW.md  DOCUMENTATION.md  DOMAIN_SETUP_GUIDE.md  FEATURE_GAP_REPORT.md  FIX_DATABASE_USER.md  IMPLEMENTATION_SUMMARY.md  MIGRATE_SQL_SCRIPTS.md  PRESERVE_SQL_SCRIPTS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_SETUP.md  PYTHON_VERSION_ISSUE.md  README.md  SETUP-PROGRESS.md  SETUP_COMPLETE.md  SETUP_NOTES.md  SNOWFLAKE_VERIFICATION.md  STAGING_FIXES_SUMMARY.md  STAGING_SETUP.md  TEST_IDICORE_API.md  TEST_LISTS.md  UPDATE_PRODUCTION.md  add_google_credentials_to_env.md  check-docker-compose.sh  deploy-on-server.sh  deploy-remote.sh  (+20 more)
backend/: .dockerignore  .env copy  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test_phone_key_safety.py  test_phone_normalization_simple.py
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: TEST_OPTIMIZATIONS_README.md  add_google_credentials_to_env.py  analyze_master_processed_db.py  backup_sql_scripts.py  check_container_structure.py  clear_config_value.py  convert_google_credentials.py  create_initial_user.py  create_user.py  delete_user.py  migrate_additional_data.py  migrate_sql_scripts.py  remove_processed_records_from_sheets.py  restore_sql_scripts.py  seed_demo_data.py  test_both_lists.py  test_dnc_list.py  test_etl_optimizations.py  (+3 more)
(+359 files in other folders)
